--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+     "axios": "^1.12.2",
+    "dayjs": "^1.11.18"
   },
   "scripts": {
     "start": "react-scripts start",
